ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__profile_permissions_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions


› 1. Ask for approval (current)  Ava can read and edit files in the current
                                 workspace, and run commands. Approval is
                                 required to access the internet or edit other
                                 files.
  2. Approve for me              Only ask for actions detected as potentially
                                 unsafe.
  3. Full Access                 Ava can edit files outside this workspace and
                                 access the internet without asking for
                                 approval. Exercise caution when using.
  4. Read Only                   Ava can read files in the current workspace.
                                 Approval is required to edit files or access
                                 the internet.

  enter select · esc back
